# P3-WikiLinks

./: .gitignore
Archive/: tailwind.config.ts
Archive/src/app/: globals.css  layout.tsx  page.tsx
scraper/: .env  .gitignore  Cargo.toml  README.md  condensation.sql
scraper/.sqlx/: query-00d23a4865bd052f32b2699c1bfaa6d3834634dc0a8174373d3e04fd954ea6a1.json  query-20b641ea63b46728a3ad9830c9b2a1a3f86de991af1b0c969a5ba1f621794c59.json  query-25a2c97264e2c9f6437db597c52defd93b23e2ab6b2dc28b388ce3db601986a7.json  query-a08ecf9882f6dcd898c4cbc2b0fe09154bf17180b960ec62cd741504f78b59c0.json  query-d90740a5e5926d79f3922209f97650bec59f2b3f1b489bf45fdbddb6923936bf.json
scraper/migrations/: 20241203171731_initial.sql
scraper/src/articles/: dto.rs  main.rs
scraper/src/links/: dto.rs  main.rs
server/: Cargo.toml
server/src/: helpers.rs  main.rs  service.rs
site/: README.md  package.json
site/src/app/: globals.css
