[package]
name = "scraper"
version = "0.1.0"
edition = "2021"

[profile.release]
codegen-units = 1

[[bin]]
name = "articles"
path = "src/articles/main.rs"

[[bin]]
name = "links"
path = "src/links/main.rs"

[dependencies]
base64 = "0.22.1"
reqwest = { version = "0.12.9", features = ["json"] }
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
serde_urlencoded = "0.7.1"
sqlx = { version = "0.8.2", features = ["postgres", "runtime-tokio"] }
tokio = { version = "1.42.0", features = ["rt", "rt-multi-thread", "macros"] }
