[package]
name = "wikilinks"
version = "0.1.0"
edition = "2021"

[dependencies]
bytes = "1.8.0"
http-body-util = "0.1.2"
hyper = { version = "1.5.1", features = ["full"] }
hyper-util = { version = "0.1.10", features = ["full"] }
sqlx = { version = "0.8.2", features = ["runtime-tokio", "postgres"] }
tokio = { version = "1.41.1", features = ["rt", "rt-multi-thread", "macros", "full"] }

[profile.release]
codegen-units = 1

[build-dependencies]
sqlx = { version = "0.8.2", features = ["runtime-tokio", "postgres"] }
tokio = { version = "1.41.1", features = ["rt", "rt-multi-thread", "macros", "full"] }
quote = "1.0"